FEAT: publish script

--- a/package.json
+++ b/package.json
@@ -32,7 +32,8 @@
     "dist"
   ],
   "scripts": {
-    "build": "tsup"
+    "build": "tsup",
+    "publish": "npm run build && npm publish --access public"
   },
   "peerDependencies": {
     "react": ">=17.0.0 <20.0.0",
