fix(npm): update npm info

--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "framer-motion",
     "react-library"
   ],
-  "homepage": "https://github.com/firlyafriansyah/tourin-web#readme",
+  "homepage": "https://tourin-web.firlyafriansyah.com",
   "bugs": {
     "url": "https://github.com/firlyafriansyah/tourin-web/issues"
   },
